--- a/userrace.html
+++ b/userrace.html
@@ -19,7 +19,7 @@
     }
  
     var user = new Racer(Number(prompt("Please enter your speed 1-10", "5")),Number(prompt("Please enter your focus level 1-10", "5")),prompt("Please enter your name", "Racer")),
-        rabbit = new Animal(5,3,"Peter");
+        rabbit = new Racer(5,3,"Peter");
  
     var distance = 100;
  
